<resources>
    <string name="app_name">L1 certification Auth</string>
    <string name="algun_titulo">To Do App</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
</resources>