<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data></data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="@string/algun_titulo"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginBottom="10dp"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter your credentials"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginBottom="10dp"

            />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/e_mail" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"

            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="20sp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:text="@string/sign_in"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:clickable="true"
            android:textSize="20sp"
            android:text="@string/forgot_password"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/normalText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:textSize="16sp"
            android:text="@string/or_sign_in_with"
            android:textAlignment="center"
            android:textColor="#455A64" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/forgotPasswordText"
            android:layout_width="match_parent"
            android:layout_height="100dp">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/facebookBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/floatingActionButton5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/googleBtn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:srcCompat="@drawable/yahoo"
                app:backgroundTint="@color/white"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/facebookBtn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:backgroundTint="@color/white"
                app:srcCompat="@drawable/baseline_local_phone_24" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/googleBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/facebookBtn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:srcCompat="@drawable/google__g__logo"
                app:backgroundTint="@color/white"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:text="@string/don_t_have_an_account"
            android:textAlignment="center"

            android:textColor="#455A64" />

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Create an account here"
            android:textStyle="bold"
            android:textSize="20sp"
            android:clickable="true"/>


    </LinearLayout>



</layout>
